# OpenNitemare3D

./: .travis.yml  CMakeLists.txt  Makefile  OpenNitemare3D.sln  OpenNitemare3D.vcxproj  README.md  engine.cpp  engine.h  fileNames.cpp  fileNames.h  img.cpp  img.h  imgLoader.cpp  main.cpp  pal.cpp  pal.h
OpenNitemare3D/: OpenNitemare3D.vcxproj  OpenNitemare3D.vcxproj.filters  main.cpp  packages.config
OpenNitemare3D/Debug/: vc142.idb
OpenNitemare3D/Debug/OpenNitemare3D.tlog/: OpenNitemare3D.lastbuildstate
OpenNitemare3D/Release/OpenNitemare3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenNitemare3D.lastbuildstate  OpenNitemare3D.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenNitemare3D/engine/: dr_pcx.c  dr_pcx.h
OpenNitemare3D/engine/camera/: Camera.cpp  Camera.h
OpenNitemare3D/engine/dat/: Datoffset.h  Datreader.cpp  Datreader.h
OpenNitemare3D/engine/entity/: Entity.cpp  Entity.h
OpenNitemare3D/engine/img/: Color.h  Sprite.h  img.cpp  img.h
OpenNitemare3D/engine/map/: AnimatedTile.h  Map.cpp  Map.h  Tile.h
OpenNitemare3D/engine/math/: Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h
OpenNitemare3D/engine/pal/: pal.cpp  pal.h
OpenNitemare3D/engine/sound/: Music.cpp  Music.h  Sound.cpp  Sound.h
OpenNitemare3D/engine/sounds/: Sounds.h
OpenNitemare3D/engine/tiles/: Tiles.cpp  Tiles.h
OpenNitemare3D/game/entities/: Frankenstein.h
OpenNitemare3D/game/entities/player/: Player.cpp  Player.h
OpenNitemare3D/game/hud/: Hud.h
